// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarStack should render correctly 1`] = `
<DocumentFragment>
  .cache-q2zvqm {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: inset 0px 0px 0px 1px #f6f5f7;
  overflow: hidden;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+1) {
  background: linear-gradient(-45deg, rgba(255,255,255,0.1) 25%,
        #4f0599 25%, #4f0599 50%,
        rgba(255,255,255,0.1) 50%, rgba(255,255,255,0.1) 75%, #4f0599
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #4f0599;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+2) {
  background-color: #6907ca;
  background-image: linear-gradient(
          135deg,
          rgba(255,255,255,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          rgba(255,255,255,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          rgba(255,255,255,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          rgba(255,255,255,0.25)
            25%,
          #6907ca
            25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+3) {
  background: linear-gradient(-45deg, rgba(255,255,255,0.1) 25%,
        #ae5df6 25%, #ae5df6 50%,
        rgba(255,255,255,0.1) 50%, rgba(255,255,255,0.1) 75%, #ae5df6
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #7d0ce1;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+4) {
  background-color: #ae5df6;
  background-image: linear-gradient(
          135deg,
          rgba(255,255,255,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          rgba(255,255,255,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          rgba(255,255,255,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          rgba(255,255,255,0.2)
            25%,
          #ae5df6 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+5) {
  background: linear-gradient(-45deg, rgba(255,255,255,0.2) 25%,
        #c68df9 25%, #c68df9 50%,
        rgba(255,255,255,0.2) 50%, rgba(255,255,255,0.2) 75%, #c68df9
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #c68df9;
}

.cache-1mc9zcp {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #fff;
}

.cache-1qm6m3g {
  height: 50px;
  font-weight: 600;
  color: #fff;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 rgba(74,79,98,0.3),0 1px rgba(74,79,98,0.3),1px 0 rgba(74,79,98,0.3),0 -1px rgba(74,79,98,0.3);
}

<div
    class="cache-q2zvqm e17nk4tl0"
  >
    <div
      class="cache-1mc9zcp e17nk4tl2"
      style="width: 10.638297872340425%;"
    >
      <div
        class="cache-1qm6m3g e17nk4tl1"
      >
        Hello
      </div>
    </div>
    <div
      class="cache-1mc9zcp e17nk4tl2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-1qm6m3g e17nk4tl1"
      />
    </div>
    <div
      class="cache-1mc9zcp e17nk4tl2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-1qm6m3g e17nk4tl1"
      >
        Encore
      </div>
    </div>
    <div
      class="cache-1mc9zcp e17nk4tl2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-1qm6m3g e17nk4tl1"
      >
        Next
      </div>
    </div>
    <div
      class="cache-1mc9zcp e17nk4tl2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-1qm6m3g e17nk4tl1"
      >
        Bye bye
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BarStack should render correctly with event handlers 1`] = `
<DocumentFragment>
  .cache-q2zvqm {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: inset 0px 0px 0px 1px #f6f5f7;
  overflow: hidden;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+1) {
  background: linear-gradient(-45deg, rgba(255,255,255,0.1) 25%,
        #4f0599 25%, #4f0599 50%,
        rgba(255,255,255,0.1) 50%, rgba(255,255,255,0.1) 75%, #4f0599
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #4f0599;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+2) {
  background-color: #6907ca;
  background-image: linear-gradient(
          135deg,
          rgba(255,255,255,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          rgba(255,255,255,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          rgba(255,255,255,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          rgba(255,255,255,0.25)
            25%,
          #6907ca
            25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+3) {
  background: linear-gradient(-45deg, rgba(255,255,255,0.1) 25%,
        #ae5df6 25%, #ae5df6 50%,
        rgba(255,255,255,0.1) 50%, rgba(255,255,255,0.1) 75%, #ae5df6
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #7d0ce1;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+4) {
  background-color: #ae5df6;
  background-image: linear-gradient(
          135deg,
          rgba(255,255,255,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          rgba(255,255,255,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          rgba(255,255,255,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          rgba(255,255,255,0.2)
            25%,
          #ae5df6 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+5) {
  background: linear-gradient(-45deg, rgba(255,255,255,0.2) 25%,
        #c68df9 25%, #c68df9 50%,
        rgba(255,255,255,0.2) 50%, rgba(255,255,255,0.2) 75%, #c68df9
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #c68df9;
}

.cache-1mc9zcp {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #fff;
}

.cache-1qm6m3g {
  height: 50px;
  font-weight: 600;
  color: #fff;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 rgba(74,79,98,0.3),0 1px rgba(74,79,98,0.3),1px 0 rgba(74,79,98,0.3),0 -1px rgba(74,79,98,0.3);
}

<div
    class="cache-q2zvqm e17nk4tl0"
  >
    <div
      class="cache-1mc9zcp e17nk4tl2"
      style="width: 100%;"
    >
      <div
        class="cache-1qm6m3g e17nk4tl1"
      >
        Hello
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BarStack should render correctly with total 1`] = `
<DocumentFragment>
  .cache-q2zvqm {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  border-radius: 4px;
  box-shadow: inset 0px 0px 0px 1px #f6f5f7;
  overflow: hidden;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+1) {
  background: linear-gradient(-45deg, rgba(255,255,255,0.1) 25%,
        #4f0599 25%, #4f0599 50%,
        rgba(255,255,255,0.1) 50%, rgba(255,255,255,0.1) 75%, #4f0599
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #4f0599;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+2) {
  background-color: #6907ca;
  background-image: linear-gradient(
          135deg,
          rgba(255,255,255,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          rgba(255,255,255,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          rgba(255,255,255,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          rgba(255,255,255,0.25)
            25%,
          #6907ca
            25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+3) {
  background: linear-gradient(-45deg, rgba(255,255,255,0.1) 25%,
        #ae5df6 25%, #ae5df6 50%,
        rgba(255,255,255,0.1) 50%, rgba(255,255,255,0.1) 75%, #ae5df6
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #7d0ce1;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+4) {
  background-color: #ae5df6;
  background-image: linear-gradient(
          135deg,
          rgba(255,255,255,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          rgba(255,255,255,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          rgba(255,255,255,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          rgba(255,255,255,0.2)
            25%,
          #ae5df6 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-q2zvqm .e17nk4tl2:nth-child(5n+5) {
  background: linear-gradient(-45deg, rgba(255,255,255,0.2) 25%,
        #c68df9 25%, #c68df9 50%,
        rgba(255,255,255,0.2) 50%, rgba(255,255,255,0.2) 75%, #c68df9
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #c68df9;
}

.cache-1mc9zcp {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #fff;
}

.cache-1qm6m3g {
  height: 50px;
  font-weight: 600;
  color: #fff;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 rgba(74,79,98,0.3),0 1px rgba(74,79,98,0.3),1px 0 rgba(74,79,98,0.3),0 -1px rgba(74,79,98,0.3);
}

<div
    class="cache-q2zvqm e17nk4tl0"
  >
    <div
      class="cache-1mc9zcp e17nk4tl2"
      style="width: 2%;"
    >
      <div
        class="cache-1qm6m3g e17nk4tl1"
      >
        Hello
      </div>
    </div>
    <div
      class="cache-1mc9zcp e17nk4tl2"
      style="width: 4.2%;"
    >
      <div
        class="cache-1qm6m3g e17nk4tl1"
      />
    </div>
    <div
      class="cache-1mc9zcp e17nk4tl2"
      style="width: 4.2%;"
    >
      <div
        class="cache-1qm6m3g e17nk4tl1"
      >
        Encore
      </div>
    </div>
    <div
      class="cache-1mc9zcp e17nk4tl2"
      style="width: 4.2%;"
    >
      <div
        class="cache-1qm6m3g e17nk4tl1"
      >
        Next
      </div>
    </div>
    <div
      class="cache-1mc9zcp e17nk4tl2"
      style="width: 4.2%;"
    >
      <div
        class="cache-1qm6m3g e17nk4tl1"
      >
        Bye bye
      </div>
    </div>
  </div>
</DocumentFragment>
`;
